--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -127,8 +127,8 @@
 								<p class="planet-image-left section-description-planet"><a href=""><img alt="main-planet-image" class="planet-img box" src="web-img/mainPlanet.png"/></a></p>
 							</div>
 							<div class="col-md-8">
-								<h3 class="experience-section-right planet-header">Main Planet (Unnamed)</h3>
-								<p class="experience-section-right section-description-planet">
+								<h3 class="planet-section-right planet-header">Main Planet (Unnamed)</h3>
+								<p class="planet-section-right section-description-planet">
 									This is the main planetary system on the solar system. Description to come.
 								</p>
 								<!--
