--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<div class="row">
 							<h2 class="text-align-center">About</h2>
 							<p class="section-description">
-								MMORPDND is intended to be an open soure DND world that can be contributed to by anyone interested. The solar system is to be designed to be believable and provide a foundation for others to easily create and add their own touch as far as a DND campaign. The base of the project is to contain ultra HD maps and lanscapes that players can claim part of to adapt and customize for their own purposes. 
+								MMORPDND (Massively Multiplayer Online Role Playing Dungeons And Dragons) is intended to be an open soure DND world that can be contributed to by anyone interested. The solar system is to be designed to be believable and provide a foundation for others to easily create and add their own touch as far as a DND campaign. The base of the project is to contain ultra HD maps and lanscapes that players can claim part of to adapt and customize for their own purposes. 
 							</p>
 							<p class="section-description">
 								Currently, the project is brand new. The initial release will consist of the first completed planet ready for use by other creators.
@@ -110,10 +110,29 @@
 					</div>	
 				</section>
 			</div>
+			
 			<!-- ============== DIVIDER ============== -->
 			<div class="Divider">
 				<hr class="Divider-rule">
-			</div>				
+			</div>
+			
+			<!-- ============== HOWTO SECTION =============== -->
+			<div class="row">
+				<section class="red-texture" id="howto">
+					<div class="container">
+						<div class="row">
+							<h2 class="text-align-center">How to use MMORPDND</h2>
+							<p class="section-description">
+								
+							</p>
+						</div>
+					</div>	
+				</section>
+			</div>
+			<!-- ============== DIVIDER ============== -->
+			<div class="Divider">
+				<hr class="Divider-rule">
+			</div>		
 				
 			<!-- ============== BEGIN FOOTER - PYTHON ENCODED =============== -->
 			<div class="row pattern-dark">
