Fixing linking error with capital file name

--- a/python/main-nav-bar.html
+++ b/python/main-nav-bar.html
@@ -13,14 +13,14 @@
 							</div>
 							<div class="collapse navbar-collapse" id="main-nav">
 								<ul class="nav navbar-nav navbar-right">
-									<li class="dropdown"><div class="plain-link"><a href="index.html">Home</a></div>
+									<li class="dropdown"><div class="plain-link"><a href="index.html#home">Home</a></div>
 										<div class="dropdown-content">
 											<ul class="nav">
 												<div class="plain-link"><a href="index.html#about">About</a></div>
 											</ul>
 										</div>
 									</li>
-									<li class="dropdown"><div class="plain-link"><a href="solarSystem.html">Solar System</a></div>
+									<li class="dropdown"><div class="plain-link"><a href="solarSystem.html#home">Solar System</a></div>
 										<div class="dropdown-content">
 											<ul class="nav">
 												<div class="plain-link"><a href="solarSystem.html#about">About</a></div>
