Added a grid to the main planet

--- a/solarSystem.html
+++ b/solarSystem.html
@@ -121,14 +121,28 @@
 							<h2 class="text-align-center h2-planet">Celestial Bodies (Planets)</h2>
 						</div>
 						
-						<!-- MIA -->
+						<!-- Sun -->
 						<div class="row">
 							<div class="col-md-4">
-								<p class="planet-image-left section-description-planet"><a href=""><img alt="main-planet-image" class="planet-img box" src="web-img/mainPlanet.png"/></a></p>
+								<p class="planet-image-left section-description-planet"><a href=""><img alt="main-planet-image" class="planet-img box" src="web-img/sun-wide.png"/></a></p>
 							</div>
 							<div class="col-md-8">
-								<h3 class="planet-section-right planet-header">Main Planet (Unnamed)</h3>
+								<h3 class="planet-section-right planet-header">System Star (Unnamed)</h3>
 								<p class="planet-section-right section-description-planet">
+									This is the main planetary system star. Description to come.
+								</p>
+								<!--
+								<p class="experience-section-right section-description">
+									<a href=""><button type="button" class="button-padding project-button btn btn-warning"></button></a>
+									<a href=""><button type="button" class="button-padding project-button btn btn-warning"></button></a>
+								</p>
+								-->
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-8">
+								<h3 class="planet-section-left planet-header">Main Planet (Unnamed)</h3>
+								<p class="planet-section-left section-description-planet">
 									This is the main planetary system on the solar system. Description to come.
 								</p>
 								<!--
@@ -137,6 +151,9 @@
 									<a href=""><button type="button" class="button-padding project-button btn btn-warning"></button></a>
 								</p>
 								-->
+							</div>
+							<div class="col-md-4">
+								<p class="planet-image-right section-description-planet"><a href=""><img alt="main-planet-image" class="planet-img box" src="web-img/mainPlanet.png"/></a></p>
 							</div>
 						</div>
 					</div>	
