Added text to template page

--- a/blank.html
+++ b/blank.html
@@ -83,8 +83,8 @@
 					<!-- End of main navigation bar - PYTHON ENCODED -->
 					
 					<!-- Banner -->
-					<h1>
-						<img onload="this.style.opacity='1';" class="big-logo" src="web-img/AntoniusTorode.png" alt="banner">
+					<h1 onload="this.style.opacity='1';" class="big-logo-text">
+						Template
 					</h1>
 				</header>
 			</div>
