--- a/solarSystem.html
+++ b/solarSystem.html
@@ -124,7 +124,7 @@
 						<!-- Sun -->
 						<div class="row">
 							<div class="col-md-4">
-								<p class="planet-image-left section-description-planet"><a href=""><img alt="main-planet-image" class="planet-img box" src="web-img/sun-wide.png"/></a></p>
+								<p class="planet-image-left section-description-planet"><a href=""><img alt="sun-image" class="planet-img box" src="web-img/Sun-wide.png"/></a></p>
 							</div>
 							<div class="col-md-8">
 								<h3 class="planet-section-right planet-header">System Star (Unnamed)</h3>
