--- a/Matella/index.html
+++ b/Matella/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset=utf-8" />
-	<title>Template</title>
+	<title>Matella</title>
 	
 	<!-- overlay css -->
 	<link rel="stylesheet" href="css/overlay.css">
