Added some Matella files

--- a/Matella/index.html
+++ b/Matella/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="parent">
 		<!-- PYTHON BEGIN -->
-		<img class="background" src="Matella.jpg" />
+		<img class="background" src="Matella.jpg"  alt="background"/>
 		<!-- PYTHON END -->
     </div>
 </body>
