--- a/Matella/rivers/queyRiver.html
+++ b/Matella/rivers/queyRiver.html
@@ -15,7 +15,7 @@
         <h2 id="QuestIsland">Quest Island</h2>
         <p>This 'island' (which technically isn't an island, but rather a peninsula) was named quest island long ago when a man named <a href="../characters/Dessa.html#BhomianDessa">Bhomian Dessa</a> set out on a quest to settle a new town with his family. He traveled down Quey river heading north where he eventually founded Dessaquest. This island is home to a small settlement of wild <a href="https://dnd-5e-homebrew.tumblr.com/post/144603162549/murloc-race-by-maclimes">Murlocs</a> (<a href="https://www.pirategonzalezgames.com/piratesblog/2019/7/20/murlocs">character sheets</a>). These murlocs tend to wonder about at night and tend to stay hidden throughout the daylight hours. They have a small village in the center of the island where they have their huts.</p>
         <h2>The Forgotten Lab of Kenneth Zud</h2>
-        <p></p>
+        <p>Just north of Quest Island, under the shore, lies a small cave. The cave leads to an underground cavern only accessible by the water. This cavern is an abandoned laboratory of <a href="../characters/kennethZud.html">Kenneth Zud</a>.</p>
     </div> <!-- END MAIN CONTAINER -->
 </body>
 </html>
