Added dessaquest informtion

--- a/Matella/characters/GenjiTinker.html
+++ b/Matella/characters/GenjiTinker.html
@@ -12,6 +12,11 @@
         <h1 id="genjiTinker">Genji Tinker</h1>
         <p>Genji is a goblin engineer who currently lives in <a href="../towns/dessaquest.html">Dessaquest</a>. He is constantly coming up with new ideas and creating strange gadgets.</p>
         <h3>Electromagnetic Gigaflux Detectivators.</h3>
+        <p>These detectivators appear as mechanical glasses. On one eye, a spinning blue lense that slowly turns as a goofy satellite dish looking thing rotates above it. This mechanism is spring powered and needs wound. The dish amplifies vibrations in the ground and can be detected via faint electrical impulses emitted by the detectivators.</p>
+        <h3>Bag of Gadgets and Gizmos</h3>
+        <p>This bag is full of various MacGyver type items that Genji may need for any situation. This includes paper clips, tape, writing utensils, gems, lenses, wire, knives, and more.</p>
+        <h3>Electrostatic Magneplates</h3>
+        <p>These are small discs that can be used to electrically attract anything matching the electrical charge of a humanoid. When activated, they take two seconds to build up their attraction. Once attracted, the target must make a DC 19 strength check of be attracted to the surface these are on. The target becomes paralyzed for 1d8 minutes, when the batteries then run out. Damage caused to the target has a 50% chance to disable this effect.</p>
     </div>
 </body>
 </html>
