--- a/Matella/characters/kennethZud.html
+++ b/Matella/characters/kennethZud.html
@@ -10,9 +10,11 @@
 <body>
     <div class="main-container">
         <h1 id="kennethZud">Kenneth Zud</h1>
-        <p>Kenneth Zud is a doctor of archeology and studies rare and ancient artifacts. In his youth, he was the apprentice of Reno Jackson The Relicologist. He travelled to Matella many years ago to search for and study rare and priceless artifacts. One artifact in particular that brought him here was one spoken of in the Legends of Zineth, the Galifor Crystal. Upon finding the Tower of Ashara with a group of explorers accompanied by Reno, they found some lost pages of the Legens of Zineth which Kenneth believed to hint towards Matella. This lead him on his quest to leave the training of Reno and start his own journey on Matella.</p>
+        <p>Kenneth Zud is an Elven doctor of archeology and studies rare and ancient artifacts. In his youth, he was the apprentice of Reno Jackson The Relicologist. He travelled to Matella many years ago to search for and study rare and priceless artifacts. One artifact in particular that brought him here was one spoken of in the Legends of Zineth, the Galifor Crystal. Upon finding the Tower of Ashara with a group of explorers accompanied by Reno, they found some lost pages of the Legens of Zineth which Kenneth believed to hint towards Matella. This lead him on his quest to leave the training of Reno and start his own journey on Matella.</p>
         <h2>The Labs of Kenneth</h2>
         <p>Kenneth creates his labs hidden in caves and is very good at hiding their entrances among the natural surroundings. He tends to not stay in one place very often and is constantly traveling. On occasion, he hides relics and artifacts he finds in his labs for him to return to and retrieve later.</p>
+        <h3><a href="../rivers/queyRiver.html#kennethZudLabQueyIsland">kenneth Zud's Lab on QueyIsland</a></h3>
+        <p>On his way to <a href="../towns/dessaquest.html">Dessaquest</a>, Kenneth spent a few days setting up a secret lab on Quey Island just south of the town. He used this as a secret base camp during his time in <a href="../towns/dessaquest.html">Dessaquest</a> before creatign a second lab to the north of the town before his travels north.</p>
     </div>
 </body>
 </html>
