--- a/Matella/resources/plantsAndHerbs.html
+++ b/Matella/resources/plantsAndHerbs.html
@@ -10,6 +10,20 @@
         <ul>
             <li>Alchemy guide: <a href="https://www.gmbinder.com/share/-L7N3qQqUZNNLIeVT5Zx">https://www.gmbinder.com/share/-L7N3qQqUZNNLIeVT5Zx</a></li>
         </ul>
+        <h1>Plants and Herbs</h1>
+        <ul>
+            <li>Bogbean plant - A main ingredient in 'kush', a mind expanding psycodelic.</li>
+            <li>Lillysuckle - This plant has large fern like leaves that are a dark green. In its center there is a large red lilly. The flowers are used in many gourmet dishes and the leaves provide great properties for wound healing and stiching.</li>
+        </ul>
+        <h1>Roots and Barks</h1>
+        <ul>
+            <li>Liferoot - A green and brown herb. When split open, the inside contains many thin strands, almost like tiny muscle fibers. This herb has many medicinal properties and is often used to treat hangovers.</li>
+            <li>Deathroot - Outwardly identical to Liferoot, this herb has significantly thicker strands when broken open. The thick strands allow for retention and creation of various toxins that is used to ward off predators and allows the Liferoot to grow. This herb can cause severe allergic reactions and is known to act as poison to those who consume it.</li>
+        </ul>
+        <h1>Berries and Fruits</h1>
+        <ul>
+            <li>Dayberry - This berry is a bright yellow. It is sweet with a bitter aftertaste.</li>
+        </ul>
     </div>
 </body>
 </html>
