--- a/Matella/characters/GenjiTinker.html
+++ b/Matella/characters/GenjiTinker.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-container">
         <h1 id="genjiTinker">Genji Tinker</h1>
-        <p>Genji is a goblin engineer who currently lives in <a href="../towns/dessaquest.html">Dessaquest</a>. He is constantly coming up with new ideas and creating strange gadgets.</p>
+        <p>Genji is a goblin engineer who currently lives in <a href="../towns/Dessaquest.html">Dessaquest</a>. He is constantly coming up with new ideas and creating strange gadgets.</p>
         <h3>Electromagnetic Gigaflux Detectivators.</h3>
         <p>These detectivators appear as mechanical glasses. On one eye, a spinning blue lense that slowly turns as a goofy satellite dish looking thing rotates above it. This mechanism is spring powered and needs wound. The dish amplifies vibrations in the ground and can be detected via faint electrical impulses emitted by the detectivators.</p>
         <h3>Bag of Gadgets and Gizmos</h3>
