--- a/Matella/items/fangOfElaine.html
+++ b/Matella/items/fangOfElaine.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="main-container">
-        <img src="fangOfElaine.jpg" alt="fangOfElaine" style="max-width: 75%;">
+        <img src="images/fangOfElaine.jpg" alt="fangOfElaine" style="max-width: 75%;">
         <h1>The Fang Of Elaine</h1>
         <p>This legendary blade is one of a set (the other's being <a href="fangOfPellinore.html">The Fang Of Pellinore</a>, <a href="fangOfAzshira.html">The Fang Of Azshira</a>, and <a href="fangOfEssieldore.html">The Fang Of Essieldore</a>). It appears as though to be forged from a hardened crystal that emits a faint light blue mist. The crystal is slightly transparent.</p>
         <p>This blade was forged alongside its paired blade and contains the soul of <a href="../characters/Loredmeyer.html#ElaineLoredMeyer">Elaine Loredmeyer</a> and essence of her abilities. As the user wields this dagger, the soul inside will become more and more attuned to it's beholder. Depending on the alignment of the wielder, this can provide various capabilities to the user.</p>
@@ -46,7 +46,7 @@
             <p>On each strike of the weapon, you deal 1d8 frost damage to the enemy.</p>
             <p><b>Improved Effect:</b> The Tapped soul effect gains an extra 1d8 (Increasing to a total of 2d8).</p>
             <h3>Soul Frost Bite</h3>
-            <p>When you make a melee attack with this weapon you inflict a Frosty chill to the soul of the target. This lasts for one hour or until dispelled. The target will take 1d4 extra frost damage once per turn on a melee attack against it.</p>
+            <p>When you make a melee attack with this weapon you inflict a Frosty chill to the soul of the target. This lasts for one hour or until dispelled. The target will take 1d4 extra frost damage once per turn on a melee attack against it. If this effect is already on the target, you further chill the targets soul on a subsequent melee attack, which will decrease the targets movement by half next round.</p>
             <p><b>Improved Effect:</b> The Tapped soul effect gains an extra 1d4 (Increasing to a total of 2d4).</p>
         </div>
     </div>
