--- a/Matella/items/fangOfEssieldore.html
+++ b/Matella/items/fangOfEssieldore.html
@@ -2,9 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>The Fang Of Essieldore</title>
 </head>
 <body>
-In progress...
+<div class="main-container">
+    <img src="images/fangOfEssieldore.jpg" alt="fangOfEssieldore" style="max-width: 75%;">
+    <h1>The Fang Of Essieldore</h1>
+    <p>This legendary blade is one of a set (the other's being <a href="fangOfPellinore.html">The Fang Of Pellinore</a>, <a href="fangOfAzshira.html">The Fang Of Azshira</a>, and <a href="fangOfElaine.html">The Fang Of Elaine</a>). It appears as though to be forged from a hardened crystal that emits a faint light blue mist. The crystal is slightly transparent.</p>
+    <p>This blade was forged alongside its paired blade and contains the soul of <a href="../characters/Loredmeyer.html#EssieldoreLoredMeyer">Essieldore Loredmeyer</a> and essence of his abilities. As the user wields this dagger, the soul inside will become more and more attuned to it's beholder. Depending on the alignment of the wielder, this can provide various capabilities to the user.</p>
+
+    <h2>Stats</h2>
+    <p>This weapon is considered a dagger and does 1d4 piercing damage and 1d4 poison damage. After becoming increasingly attuned to the weapon and the soul it contains, the soul within this weapon begins to allow its influence to help you in battle and gains the following effects.</p>
+    <ul>
+        <li>Level 3: Gains +2 to all attack rolls.</li>
+        <li>Level 6: Gains the Tapped Soul Effect (See below)</li>
+        <li>Level 9: Gains the Poison Bite Ability (See below) </li>
+        <li>Level 12: Gains the Improved Tapped Soul Effect (See below) </li>
+        <li>Level 15: Gains the Improved Poison Bite Ability (See below) </li>
+        <li>Level 18: This weapon gains 1d8 poison damage on each hit.</li>
+    </ul>
+
+    <h2>Good Alignment</h2>
+    <div class="padding-left">
+        <h3>Tapped Soul (Effect)</h3>
+        <p>On each strike of the weapon, you can choose to siphon 1d4 poison damage from the enemy and heal yourself.</p>
+        <p><b>Improved Effect:</b> The Tapped soul effect gains an extra 1d4 (Increasing to a total of 2d4).</p>
+        <h3>Poison Bite</h3>
+        <p>When you make a melee attack with this weapon you can choose to inflict a poison to the target. This lasts for one minute or until cured. The target will take 1d4 extra poison damage once per turn on a melee attack against it. If this effect is already on the target, you can choose to further poison the target on a subsequent melee attack, which will decrease the targets concentration next round by removing the ability to take any bonus actions.</p>
+        <p><b>Improved Effect:</b> The Tapped soul effect gains an extra 1d4 (Increasing to a total of 2d4).</p>
+    </div>
+
+    <h2>Neutral Alignment</h2>
+    <div class="padding-left">
+        <p>You must choose either the above or below effects, this choice cannot be changed.</p>
+    </div>
+
+    <h2>Evil Alignment</h2>
+    <div class="padding-left">
+        <h3>Tapped Soul (Effect)</h3>
+        <p>On each strike of the weapon, you deal 1d8 poison damage to the enemy.</p>
+        <p><b>Improved Effect:</b> The Tapped soul effect gains an extra 1d8 (Increasing to a total of 2d8).</p>
+        <h3>Poison Bite</h3>
+        <p>When you make a melee attack with this weapon you inflict a poison into the body of the target. This lasts for one minute or until cured. The target will take 1d4 extra poison damage once per turn on a melee attack against it. If this effect is already on the target, you further poison the target on a subsequent melee attack, which will decrease the targets concentration next round by removing the ability to take any bonus actions.</p>
+        <p><b>Improved Effect:</b> The Tapped soul effect gains an extra 1d4 (Increasing to a total of 2d4).</p>
+    </div>
+</div>
 </body>
 </html>
