--- a/Matella/resources/foodAndDrink.html
+++ b/Matella/resources/foodAndDrink.html
@@ -13,7 +13,7 @@
         </ul>
         <h1>Alcoholic Drinks</h1>
         <ul>
-            <li>The Bubbly Specials (special to <a href="../towns/dessaquest.html">Dessaquest</a>)
+            <li>The Bubbly Specials (special to <a href="../towns/Dessaquest.html">Dessaquest</a>)
                 <ul>
                     <li>Bubbly Champaigne (4s/glass) - A sour garden apple and green current champaign</li>
                     <li>Bubble Blue Ale (4s/cup) - A bilberry infused ale</li>
