--- a/Matella/rivers/QueyRiver.html
+++ b/Matella/rivers/QueyRiver.html
@@ -10,12 +10,12 @@
 <body>
     <div class="main-container">
         <h1>Quey River</h1>
-        <img src="../WCIII/riverToDessaquest.jpg" alt="riverToDessaquest" style="max-width: 50%;">
+        <img src="images/QueyRiver.jpg" alt="riverToDessaquest" style="max-width: 50%;">
         <img src="../WCIII/crashLanding.jpg" alt="crashLanding" style="max-width: 50%;">
         <h2 id="QuestIsland">Quest Island</h2>
         <p>This 'island' (which technically isn't an island, but rather a peninsula) was named quest island long ago when a man named <a href="../characters/Dessa.html#BhomianDessa">Bhomian Dessa</a> set out on a quest to settle a new town with his family. He traveled down Quey river heading north where he eventually founded Dessaquest. This island is home to a small settlement of wild <a href="https://dnd-5e-homebrew.tumblr.com/post/144603162549/murloc-race-by-maclimes">Murlocs</a> (<a href="https://www.pirategonzalezgames.com/piratesblog/2019/7/20/murlocs">character sheets</a>). These murlocs tend to wonder about at night and tend to stay hidden throughout the daylight hours. They have a small village in the center of the island where they have their huts.</p>
         <h2 id="kennethZudLabQueyIsland">The Forgotten Lab of Kenneth Zud</h2>
-        <p>Just north of Quest Island, under the shore, lies a small cave. The cave leads to an underground cavern only accessible by the water. This cavern is an abandoned laboratory of <a href="../characters/kennethZud.html">Kenneth Zud</a>. This cave is littered with old scraps and supplies. Upon investigation the party can find hte following items.</p>
+        <p>Just north of Quest Island, under the shore, lies a small cave. The cave leads to an underground cavern only accessible by the water. This cavern is an abandoned laboratory of <a href="../characters/KennethZud.html">Kenneth Zud</a>. This cave is littered with old scraps and supplies. Upon investigation the party can find hte following items.</p>
         <ul>
             <li>bone and feather quill</li>
             <li>bone kitchen utensils and tools</li>
@@ -30,6 +30,7 @@
             <li>A leatherworking pattern of how to make "Gloves of the GreatFather"</li>
         </ul>
         <p>Two prominent features of this cave are a large Dragon egg (<a href="../items/eggOfEquestador.html">The Egg of Equestador</a> sitting atop a pedestal covered in thick fur hides in the center of the cavern with inscriptions (Written in Elvish but in an ancient mathematical script) on it that explain how to hatch the egg and a marking on a stone on the wall that depicts a crystal dagger. Behind the dagger marking, within the stone lies one of the Loredmeyer daggers, detemined by 1d4.</p>
+        <img src="images/fangWallCompartment.jpg" alt="fangWallCompartment" style="max-width: 50%;">
         <ol>
             <li><a href="../items/fangOfPellinore.html">The Fang Of Pellinore</a></li>
             <li><a href="../items/fangOfAzshira.html">The Fang Of Azshira</a></li>
