--- a/Matella/towns/Dessaquest.html
+++ b/Matella/towns/Dessaquest.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <div class="main-container">
-        <img src="../WCIII/dessaquest.jpg" alt="dessaquest" style="max-width: 70%;">
+        <img src="images/Dessaquest.jpg" alt="dessaquest" style="max-width: 70%;">
         <h1>Dessaquest</h1>
-        <p>Dessaquest is a small town founded by <a href="../characters/Dessa.html#BhomianDessa">Bhomian Dessa</a> many generations ago. It has become a small humble town that has attracted people who do not much enjoy the big city life but would rather stick to a specialized trade while keeping to themselves. Despite this, the town is very close knit and everyone has a high respect for each other.</p>
+        <p>Dessaquest is a small town founded by <a href="../characters/Dessa.html#BhomianDessa">Bhomian Dessa</a> many generations ago. It is located in <a href="../kingdoms/TheAshenlands.html">The Ashenlands</a> in the kingdoms of <a href="../index.html">Matella</a>. It has become a small humble town that has attracted people who do not much enjoy the big city life but would rather stick to a specialized trade while keeping to themselves. Despite this, the town is very close knit and everyone has a high respect for each other.</p>
 
         <h2>The Shipyard</h2>
-        <p>The shipyard of Dessaquest is the main entrance that most tracers arrive at. Although there are paths to the northeast and nothest side, these lead to long trails that only traders who don't have a ship or explorers usually travel. The dockmasters' names are Elsharin, day watch) and Toshiro (night watch). As they have plenty of time, these two also repair and create ships and ship accessories that they can offer for sale.</p>
+        <p>The shipyard of Dessaquest is the main entrance that most traders arrive at and resides on the west side of the city on <a href="../rivers/QueyRiver.html">Quey River</a>. Although there are paths to the northeast and northest side, these lead to long trails that only traders who don't have a ship or explorers usually travel. The dockmasters' names are Elsharin, day watch) and Toshiro (night watch). As they have plenty of time, these two also repair and create ships and ship accessories that they can offer for sale.</p>
 
         <h2>The Tavern: Bubbly Breeze</h2>
-        <p>As most towns have, Dessaquest has a lovely Tavern. Many wines and ales imported from the surrounding region are offered here. The tavern's name is a play on words and somewhat named after it's owner Bre Gilhart. It is run by her family which consists of herself, her husband Lincoln, and her two children Serene and Kendall. They are all human. The tavern does not double as a place ot stay in town here, there is a separate place for that. However, the upstairs to the tavern does indeed have bedrooms but they are used for hte family that run the tavern.</p>
+        <p>As most towns have, Dessaquest has a lovely Tavern. Many wines and ales imported from the surrounding region are offered here. The tavern's name is a play on words and somewhat named after it's owner Bre Gilhart. It is run by her family which consists of herself, her husband Lincoln, and her two children Serene and Kendall. They are all human. The tavern does not double as a place ot stay in town here, there is a separate place for that. However, the upstairs to the tavern does indeed have bedrooms but they are used for the family that run the tavern.</p>
         <ul>
             <li>The Bubbly Specials
                 <ul>
                     <li>Bubbly Champaigne (4s/glass) - A sour garden apple and green current champaign</li>
                     <li>Bubble Blue Ale (4s/cup) - A bilberry infused ale</li>
                     <li>Bubbly Bitters (7s/shot) - A warm oak and pomegranate </li>
-                    <li>The Bubbly Bubble (1g/glass) - This is a shot of Bubble Bitters mixed with some Bubbe Blue Ale and one more secret ingredient.</li>
+                    <li>The Bubbly Bubble (1g/glass) - This is a shot of Bubble Bitters mixed with some Bubble Blue Ale and one more secret ingredient.</li>
                 </ul>
             </li>
             <li>Bentley May Bourbon (3s/shot)</li>
