--- a/Matella/items/fangOfPellinore.html
+++ b/Matella/items/fangOfPellinore.html
@@ -9,7 +9,7 @@
     </head>
 <body>
 <div class="main-container">
-    <img src="fangOfElaine.jpg" alt="fangOfElaine" style="max-width: 75%;">
+    <img src="images/fangOfPellinore.jpg" alt="fangOfPellinore" style="max-width: 75%;">
     <h1>The Fang Of Pellinore</h1>
     <p>This legendary blade is one of a set (the other's being <a href="fangOfElaine.html">The Fang Of Elaine</a>, <a href="fangOfAzshira.html">The Fang Of Azshira</a>, and <a href="fangOfEssieldore.html">The Fang Of Essieldore</a>). It appears as though to be forged from a hardened crystal that emits a faint light blue mist. The crystal is slightly transparent.</p>
     <p>This blade was forged alongside its paired blade and contains the soul of <a href="../characters/Loredmeyer.html#PellinoreLoredMeyer">Pellinore Loredmeyer</a> and essence of his abilities. As the user wields this dagger, the soul inside will become more and more attuned to it's beholder. Depending on the alignment of the wielder, this can provide various capabilities to the user.</p>
