Added to Matella content

--- a/Matella/items/eggOfEquestador.html
+++ b/Matella/items/eggOfEquestador.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Egg of Equestador</title>
+    <title>The Egg of Saphira</title>
 </head>
 <body>
     <div class="main-container">
-        <h1>The Egg of Equestador</h1>
+        <h1>The Egg of Saphira</h1>
         <p>This egg contains a half human, half <a href="https://forgottenrealms.fandom.com/wiki/Amethyst_dragon">Amethyst dragon</a> baby. The shell of this egg is as hard as steel and is is not easy to break or damage. To properly mature, this dragon egg requires warmth and darkness.</p>
     </div>
 </body>
