--- a/Matella/rivers/QueyRiver.html
+++ b/Matella/rivers/QueyRiver.html
@@ -29,8 +29,9 @@
             <li>An intact basilisk spine</li>
             <li>A leatherworking pattern of how to make "Gloves of the GreatFather"</li>
         </ul>
-        <p>Two prominent features of this cave are a large Dragon egg (<a href="../items/eggOfEquestador.html">The Egg of Equestador</a> sitting atop a pedestal covered in thick fur hides in the center of the cavern with inscriptions (Written in Elvish but in an ancient mathematical script) on it that explain how to hatch the egg and a marking on a stone on the wall that depicts a crystal dagger. Behind the dagger marking, within the stone lies one of the Loredmeyer daggers, detemined by 1d4.</p>
-        <img src="images/fangWallCompartment.jpg" alt="fangWallCompartment" style="max-width: 50%;">
+        <p>Two prominent features of this cave are a large Dragon egg (<a href="../items/eggOfEquestador.html">The Egg of Equestador</a> sitting atop a pedestal covered in thick fur hides in the center of the cavern with inscriptions (Written in Elvish) on it that explain how to hatch the egg and a marking on a stone on the wall that depicts a crystal dagger. Behind the dagger marking, within the stone lies one of the Loredmeyer daggers, detemined by 1d4.</p>
+        <p>The Elvan tablet reads "The Egg of Equestador; This creature is my pride and joy. If I am lost to it, please be sure to provide care and protection to it as it matures. It requires warmth and darkness, and of course, love. -Kenneth Zud".</p>
+        <img src="images/fangWallCompartment.jpg" alt="fangWallCompartment" style="max-width: 50%;"><img src="images/kennethZudTabletForEggt.jpg" alt="kennethZudTabletForEggt" style="max-width: 25%;">
         <ol>
             <li><a href="../items/fangOfPellinore.html">The Fang Of Pellinore</a></li>
             <li><a href="../items/fangOfAzshira.html">The Fang Of Azshira</a></li>
