Added to Matella content

--- a/Matella/items/fangOfEssieldore.html
+++ b/Matella/items/fangOfEssieldore.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>The Fang Of Essieldore</title>
+
+    <!-- main css -->
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 <div class="main-container">
