--- a/Matella/items/fangOfAzshira.html
+++ b/Matella/items/fangOfAzshira.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>The Fang of Azshira</title>
+
+    <!-- main css -->
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 In progress...
