--- a/Matella/towns/Dessaquest.html
+++ b/Matella/towns/Dessaquest.html
@@ -17,7 +17,7 @@
         <p>The shipyard of Dessaquest is the main entrance that most traders arrive at and resides on the west side of the city on <a href="../rivers/QueyRiver.html">Quey River</a>. Although there are paths to the northeast and northest side, these lead to long trails that only traders who don't have a ship or explorers usually travel. The dockmasters' names are Elsharin, day watch) and Toshiro (night watch). As they have plenty of time, these two also repair and create ships and ship accessories that they can offer for sale.</p>
 
         <h2>The Tavern: Bubbly Breeze</h2>
-        <p>As most towns have, Dessaquest has a lovely Tavern. Many wines and ales imported from the surrounding region are offered here. The tavern's name is a play on words and somewhat named after it's owner Bre Gilhart. It is run by her family which consists of herself, her husband Lincoln, and her two children Serene and Kendall. They are all human. The tavern does not double as a place ot stay in town here, there is a separate place for that. However, the upstairs to the tavern does indeed have bedrooms but they are used for the family that run the tavern.</p>
+        <p>As most towns have, Dessaquest has a lovely Tavern. Many wines and ales imported from the surrounding region are offered here. The tavern's name is a play on words and somewhat named after it's owner Bre Gilhart. It is run by her family which consists of herself, her husband Lincoln, and her two children Serene and Kendall. They are all human. The tavern does not double as a place ot stay in town here, there is a separate place for that, <a href="Dessaquest.html#villa">The Villa</a>. However, the upstairs to the tavern does indeed have bedrooms but they are used for the family that run the tavern.</p>
         <ul>
             <li>The Bubbly Specials
                 <ul>
@@ -53,7 +53,7 @@
         <p> Berinold Denko runs the library and spends his time reading and collecting knowledge for the Dessaquest library.</p>
 
         <h2>Flourishing Floristry</h2>
-        <p>Maybell Maclure is a young (mid 40's) lady who focuses entirely on growing and crossbreading flowers and plants. She spreads and plants her flowers around town to give it a much more inviting. She grows a large variety of plants that can be used for medicinal, food, apothecary, ink, and more. Some rare specialized plants grown by Maybell include the following</p>
+        <p>Maybell Declure is a young (mid 40's) lady who focuses entirely on growing and crossbreading flowers and plants. She spreads and plants her flowers around town to give it a much more inviting. She grows a large variety of plants that can be used for medicinal, food, apothecary, ink, and more. Some rare specialized plants grown by Maybell include the following</p>
         <ul>
             <li>Calamitybloom</li>
             <li>Goldleaf</li>
@@ -61,6 +61,15 @@
             <li>Cardamon Tea Leaves</li>
             <li></li>
         </ul>
+
+        <h2 id="villa">The Villa</h2>
+        <p>The Villa is a small section of high quality tents and small cabin structures. Ran by Telburn Himreich, these provide shelter for those passing through town and gives them their own area rather than being stuck in a tavern room.</p>
+
+        <h2>Maeza Physiciantry</h2>
+        <p>An elder fella, Decan Meaz, runs a physician station out of his home. He serves as the town doctor and dabbles in alchemy with his wife Sendri. Decan's family is the one who invented the strain of corn that Dessaquest is known for in the surrounding regions, the Maeza.</p>
+
+
+
     </div> <!-- END MAIN CONTAINER -->
 </body>
 </html>
