Added to Matella content

--- a/Matella/players/players.html
+++ b/Matella/players/players.html
@@ -14,24 +14,44 @@
 
             <!-- Parker (Rogue) - Allie -->
             <h2>Parker (Rogue) - Allie</h2>
+            <ul>
+                <li>2' 9" halfling - 37 pounds</li>
+                <li>19 year old young adult</li>
+            </ul>
             <p>She ran away from home because her family was poor at 11 and was taken in by a group of thieves who taught her their ways but now since she’s an adult they have told her she knows all that they can teach her and she could stay with them or she can part ways</p>
 
 
             <!-- Zinnia Zenchua (Druid) - Kira -->
             <h2>Zinnia Zenchua (Druid) - Kira</h2>
+            <ul>
+                <li>34 pouns</li>
+                <li>tan skin and blue eyes</li>
+                <li>dirty blonde dreads</li>
+                <li>A tree tattoo and flower tattoos with a flower necklace</li>
+            </ul>
             <p>Me? You want to know about me? Well, I am well. I enjoy food greatly, truly. Have you ever just walked in the forest, nowhere to go, no time to be there? I love plants, I find them very helpful in keeping our body in zen with nature. The best food I have ever had is at this nice old lady's house, It was in the forest somewhere.... I find that I like flowers the best, lots of pretty flowers. Have you ever had a stack of pancakes the same size as you? Well i have, it was awesome. I find the plants without flowers are better for you. I have this plant here that will calm you down, would you like to try it? It has a great smell. Oh, where am I from? The Forest, which one? All of them, it is where I belong! Why am I here? Well to eat I must make money and I do that by selling my plants. I am really cool with doing anything, I find I make friends easily. Isn’t everyone my friend? No? Oh well I think anyone could be a friend if you tried. Yes there are bad people but to bad people aren’t you the bad guy? You could be their friend if you switched sides. Everyone enjoys some nice tender fresh caught meat, talking over food fixes all issues.</p>
             <p>Oh I remember my house had a big garden that flowed into the forest.</p>
             <p>I don't remember.... I have no real long term memory. (I remember nothing from childhood.) I'm in my 20's. My short term memory is based purely on where I ate food, and which flowers I see. So I know my way around the Forest because of the plants. I understand what plants like to grow by each other and what resources each plant needs to grow to figure out how to get around and where to find water and such. Anything plant or food related I remember.</p>
-            <p>I have a necklace with a zinnia flower, that the actual color of the flower is Zenchua. But I think it is just a flower on a necklace but I feel like I have an attachment to it. But I don't know why. It was given to me by my parents when I was born
-            </p>
+            <p>I have a necklace with a zinnia flower, that the actual color of the flower is Zenchua. But I think it is just a flower on a necklace but I feel like I have an attachment to it. But I don't know why. It was given to me by my parents when I was born.</p>
+
 
             <!-- Cedric Mhurren (Barbarian) - Seamus -->
             <h2>Cedric Mhurren (Barbarian) - Seamus</h2>
+            <ul>
+                <li>Scar from ear to chin</li>
+                <li>Thin linen shirt and a jacket</li>
+                <li>wears a Kilt</li>
+                <li>Braids and cornrows with curly hair</li>
+            </ul>
             <p>My name is Cedric Mhurren, I was born in the lineage of the great Mhurren's to succeed my father. I chose at the age of ten to run from my destiny and become a sailor where I slowly became the captain of my own ship, Thok's Revenge, named after my grandfather, as was my Axe. By age 20 I was well known as Cedric the Orc. Half-Orc, 7 ft. 270lbs. Heavily muscled and scarred. With one predominate scar across my face from the corner of my right eye to the middle of my chin. Wears a kilt and a thin linen shirt.</p>
             <p>More key info. My father's name is Sean Mhurren, and my mother's is Yevelda Mhurren. Also I chose bad reputation for my sailor trait.</p>
 
             <!-- Lee Bruce (Monk) - Sean -->
             <h2>Lee Bruce (Monk) - Sean</h2>
+            <ul>
+                <li>145 lb and 5' 8" (Bruce Lee)</li>
+                <li>Changeling</li>
+            </ul>
             <p>At the age of 8, Lee's parents gave him to the monastery of "Verum Sui" where he would spend the rest of his life in study and training.
                 Lee's family had lived in the village (Shou-Lang) outside of the monastery for generations, it was a tradition to give one's firstborn to the monastery and Lee's family had been a part of this tradition for as long as his family had lived there.</p>
             <p>In the beginning, Lee was a part of a group of children who were all beginning their training and were given the title of Novice. Lee spent the next 7 years in training as a novice where he found his love for reading and writing. As a changeling, Lee would often try to take the forms of the people he would read about and admired most, (as well as characters he created himself) his teachers did not always approve of this and would frequently correct him when they would see him doing it. One day Father Zalfay saw Lee doing this and pulled him aside and told him, "Always be yourself, express yourself, have faith in yourself, do not seek out a successful personality and try to duplicate it. These great men that you admire, then never wanted to be just like one of their heros, they wanted to become the best that they could and in turn became not a copy of someone else, but a new powerful person of their own." From this moment on, Lee no longer took the form of others that he had admired, but would come to create his own form that he would then live by.</p>
